fix spacing with homepage content

--- a/client/src/styles/_home-content.scss
+++ b/client/src/styles/_home-content.scss
@@ -1,7 +1,7 @@
 .content-section {
   margin: 0 auto;
   padding: 6rem 4rem 3rem 4rem;
-  max-width: 50rem;
+  max-width: 80rem;
   display: flex;
   flex-direction: column;
 
@@ -19,11 +19,12 @@
 
   .main-content {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 
     article {
       margin-right: 1rem;
-      max-width: 25rem;
+      min-width: 22rem;
+      max-width: 30rem;
 
       p {
         font-size: 1.1rem;
@@ -34,14 +35,10 @@
 
     img {
     margin-left: 1rem;
-    width: 100%;
+    max-width: 400px;
     height: 400px;
     object-fit: cover;
     border: 1px solid $drkGray;
-
-      &:hover {
-        cursor: pointer;
-      }
     }
   }
 }
