--- a/client/src/styles/_navbar.scss
+++ b/client/src/styles/_navbar.scss
@@ -13,7 +13,7 @@
   // background-color: aliceblue;
 
   nav {
-    max-width: 80rem;
+    max-width: 100rem;
     display: flex;
     justify-content: space-between;
     padding: 0.5rem calc((100vw - 1500px) / 2);
